Replaced functions that are marked for 'removal' in next java versions