@@ -40,7 +40,7 @@ public class non_terminal extends symbol {
       _index = next_index++;
 
       /* add to by_index set */
-      _all_by_index.put(new Integer(_index), this);
+      _all_by_index.put(Integer.valueOf(_index), this);
     }
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
@@ -60,7 +60,7 @@ public class non_terminal extends symbol {
   /** Table of all non-terminals -- elements are stored using name strings 
    *  as the key 
    */
-  protected static Hashtable _all = new Hashtable();
+  protected static Hashtable<String,non_terminal> _all = new Hashtable<>();
 
   /** Access to all non-terminals. */
   public static Enumeration all() {return _all.elements();}
@@ -77,12 +77,12 @@ public class non_terminal extends symbol {
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
 
   /** Table of all non terminals indexed by their index number. */
-  protected static Hashtable _all_by_index = new Hashtable();
+  protected static Hashtable<Integer,non_terminal> _all_by_index = new Hashtable<>();
 
   /** Lookup a non terminal by index. */
   public static non_terminal find(int indx)
     {
-      Integer the_indx = new Integer(indx);
+      Integer the_indx = Integer.valueOf(indx);
 
       return (non_terminal)_all_by_index.get(the_indx);
     }
@@ -224,7 +224,7 @@ public class non_terminal extends symbol {
   /*-----------------------------------------------------------*/
 
   /** Table of all productions with this non terminal on the LHS. */
-  protected Hashtable _productions = new Hashtable(11);
+  protected Hashtable<production,production> _productions = new Hashtable<>(11);
 
   /** Access to productions with this non terminal on the LHS. */
   public Enumeration productions() {return _productions.elements();}
