@@ -154,7 +154,7 @@ public class production {
       _index = next_index++;
 
       /* put us in the global collection of productions */
-      _all.put(new Integer(_index),this);
+      _all.put(Integer.valueOf(_index),this);
 
       /* put us in the production list of the lhs non terminal */
       lhs_sym.add_production(this);
@@ -220,14 +220,14 @@ public class production {
   /** Table of all productions.  Elements are stored using their index as 
    *  the key.
    */
-  protected static Hashtable _all = new Hashtable();
+  protected static Hashtable<Integer,production> _all = new Hashtable<>();
  
   /** Access to all productions. */
   public static Enumeration all() {return _all.elements();}
 
     /** Lookup a production by index. */
   public static production find(int indx) {
-    return (production) _all.get(new Integer(indx));
+    return (production) _all.get(Integer.valueOf(indx));
   }
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
