@@ -25,7 +25,7 @@ public class virtual_parse_stack {
   /*-----------------------------------------------------------*/
 
   /** Constructor to build a virtual stack out of a real stack. */
-  public virtual_parse_stack(Stack shadowing_stack) throws java.lang.Exception
+  public virtual_parse_stack(Stack<Symbol> shadowing_stack) throws java.lang.Exception
     {
       /* sanity check */
       if (shadowing_stack == null)
@@ -34,7 +34,7 @@ public class virtual_parse_stack {
 
       /* set up our internals */
       real_stack = shadowing_stack;
-      vstack     = new Stack();
+      vstack     = new Stack<>();
       real_next  = 0;
 
       /* get one element onto the virtual portion of the stack */
@@ -49,7 +49,7 @@ public class virtual_parse_stack {
    *  the bottom of the virtual portion of the stack, but is always left
    *  unmodified.
    */
-  protected Stack real_stack;
+  protected Stack<Symbol> real_stack;
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
 
@@ -67,7 +67,7 @@ public class virtual_parse_stack {
    *  on the virtual stack).  When this portion of the stack becomes empty we 
    *  transfer elements from the underlying stack onto this stack. 
    */
-  protected Stack vstack;
+  protected Stack<Integer> vstack;
 
   /*-----------------------------------------------------------*/
   /*--- General Methods ---------------------------------------*/
@@ -84,13 +84,13 @@ public class virtual_parse_stack {
       if (real_next >= real_stack.size()) return;
 
       /* get a copy of the first Symbol we have not transfered */
-      stack_sym = (Symbol)real_stack.elementAt(real_stack.size()-1-real_next);
+      stack_sym = real_stack.elementAt(real_stack.size()-1-real_next);
 
       /* record the transfer */
       real_next++;
 
       /* put the state number from the Symbol onto the virtual stack */
-      vstack.push(new Integer(stack_sym.parse_state));
+      vstack.push(Integer.valueOf(stack_sym.parse_state));
     }
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
@@ -137,7 +137,7 @@ public class virtual_parse_stack {
   /** Push a state number onto the stack. */
   public void push(int state_num)
     {
-      vstack.push(new Integer(state_num));
+      vstack.push(Integer.valueOf(state_num));
     }
 
   /*-----------------------------------------------------------*/
