@@ -144,7 +144,7 @@ public class LayerMgmt extends javax.swing.JDialog {
 	  for (int i=0;i<LayerEntry.size();i++){
 	      Layer lay= (Layer)LayerEntry.elementAt(i);
 	      lay.LayerNo=i+1;    	
-    	  mw.GraphDisplay.add(lay, new Integer(i+1));
+    	  mw.GraphDisplay.add(lay, Integer.valueOf(i+1));
     	  mw.LayerSwitchBar.add(
     	  	lay.CreateLayerButton(mw.GraphDisplay.LayerButtonListener, i+1));
       	}
